Fix / improves management of the Rollout's total target counter
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>